--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sidhi",
-  "homepage": "https://radhe24.github.io/globalclassroom",
+  // "homepage": "https://radhe24.github.io/globalclassroom",
   "private": true,
   "version": "0.0.0",
   "type": "module",
